--- a/src/marsgis/components/mars-ui/themes/light/index.less
+++ b/src/marsgis/components/mars-ui/themes/light/index.less
@@ -1,31 +1,37 @@
 @import url("./zhts.less");
 
 :root[data-theme="light"] {
-  --mars-primary-color: rgb(0, 138, 255);
-  --mars-primary-half-color: rgba(69, 194, 44, 0.829);
+  //大部分的背景色 包括按钮
+  --mars-primary-color: rgba(95, 161, 158, 0.329);
+  // 基础
+  --mars-primary-half-color: rgba(40, 221, 176, 0.473);
   --mars-sub-color: #26ddff;
   --mars-danger-color: #f75165;
   --mars-warning-color: #ff8041;
   --mars-success-color: #18af92;
   --mars-base-color: #ffffff;
   --mars-content-color: #cdcdcd;
-  --mars-text-color: #19212f;
-  --mars-hover-btn-bg: #3ea6ff;
-  --mars-click-btn-bg: #015dab;
+  //内部字体
+  --mars-text-color: #30f5b3f1;
+  //鼠标移入图标的颜色
+  --mars-hover-btn-bg: #9feed4ce;
+  //图标颜色
+  --mars-click-btn-bg: #1e629c69;
   --mars-disable-btn-bg: #cdcdcd;
   --mars-base-border: #e9ecf3;
-  --mars-select-bg: rgba(0, 138, 255, 0.2);
-  --mars-bg-base: #ffffff;
-  --mars-bg-title: rgb(0, 138, 255); // 普通的头部背景色
+  --mars-select-bg: rgba(58, 185, 154, 0.527);
+  //自定义
+  --mars-bg-base: #51cee41e;
+  --mars-bg-title: rgba(69, 189, 133, 0.664); // 普通的头部背景色
   --mars-base-border-color: #b9b9b9;
-  --mars-list-active: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 98%, rgb(0, 138, 255) 100%);
+  --mars-list-active: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(134, 119, 119, 0) 98%, rgba(28, 118, 196, 0.411) 100%);
 
   --mars-title-active: rgba(255, 255, 255, 0.8);
-  --mars-title-text-active: #008aff;
+  --mars-title-text-active: #3b60816e;
 
   --mars-menu-emb: url(../assets/images/sub-menu-emb-light.png);
 
-  --mars-msg-title-bg: #008aff;
+  --mars-msg-title-bg: #3177b4b9;
 
   --mars-scrollbar-thumb: rgba(0, 138, 255, 0.4);
   --mars-scrollbar-track: rgb(236, 236, 236);
