--- a/src/styles/Ants/index.less
+++ b/src/styles/Ants/index.less
@@ -1,5 +1,9 @@
 .ant-card {
-  background-color: rgba(49, 157, 219, 0.425);
-}
-.ant-button {
+  background-color: rgba(98, 233, 166, 0.034);
+  .ant-card-head-title {
+    // font: soild 15px red;
+    color: rgb(102, 216, 201);
+    text-shadow: 5px 5px 3px rgba(87, 206, 166, 0.719);
+    // font-size: 25px;
+  }
 }
