--- a/src/marsgis/components/mars-ui/base.less
+++ b/src/marsgis/components/mars-ui/base.less
@@ -1,19 +1,19 @@
 // 颜色
-@mars-primary-color: rgba(0, 138, 255, 0.9);
+@mars-primary-color: rgba(68, 235, 151, 0.534);
 @mars-primary-color-self: rgba(14, 126, 211, 0.712);
-@mars-primary-color-half: rgba(62, 141, 211, 0.884);
+@mars-primary-color-half: rgba(42, 100, 151, 0.884);
 @mars-sub-color: #26ddff;
 @mars-danger-color: #f75165;
 @mars-warning-color: #ff8041;
 @mars-success-color: #18af92;
 @mars-base-color: #ffffff;
 @mars-content-color: #cdcdcd;
-@mars-hover-btn-bg: #3ea6ff;
-@mars-click-btn-bg: #015dab;
+@mars-hover-btn-bg: #55ebbe81;
+@mars-click-btn-bg: #3fbbaabd;
 @mars-disable-btn-bg: #cdcdcd;
 @mars-base-border: #ffffff;
-@mars-select-bg: rgba(29, 115, 190, 0.808);
-@mars-bg-base: rgba(23, 49, 71, 0.8);
+@mars-select-bg: rgba(115, 164, 207, 0.507);
+@mars-bg-base: rgba(70, 158, 129, 0.658);
 @mars-base-border-color: #d9d9d9;
 @mars-list-active: linear-gradient(90deg, rgba(0, 138, 255, 0) 0%, rgba(0, 138, 255, 0.58) 53%, rgba(0, 138, 255, 0.02) 100%);
 // 字体
@@ -90,7 +90,7 @@
 
   // 选中按钮
   .ant-radio-button-checked {
-    background-color: #1890ff;
+    background-color: #57a7f193;
   }
 
   // 表单元素
